--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="parallax.css"
 </head>
 <body>
-    <img src="bg1.jpeg" class="img1">
+    <div class="img1"></body><div>
     <div class="message">
-        small message
+      small message
     </div>
     ,<img src="bg2.jpg" class="img2">
 </body>
