--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -6,20 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div>User profile card</div>
-    <div class="box">
-      <div class="card">
-          <div class="img"></div>
-          <div class="name">nsomrod 4 </div>
-          <div class="text">level 25</div>
-          <div class="text">42bangkok</div>
-          <div
-          <div>
-               <div class="facebook"></div>
-               <div class="ig"></div>
-          </div>
-          <div class="content"</div>
-      </div>
+    <div class="header"> User profile card</div>
+
+<div class="box">
+    <div class="card">
+        <div class="img"></div>
+        <div>nsomrod 42 </div>
+        <div>level 25</div>
+        <div>42bankok</div>
+        <div class="social">
+          <a><div class="facebook"></div>
+            <div class="ig"></div>
+        </div>
+        <div>contact</div>
     </div>
+</div>
 </body>
 </html>
