--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="card.css">
 </head>
 <body>
     <div class="header"> User profile card</div>
@@ -11,15 +12,16 @@
 <div class="box">
     <div class="card">
         <div class="img"></div>
-        <div>nsomrod 42 </div>
-        <div>level 25</div>
-        <div>42bankok</div>
+        <div class="name">kanyanat</div>
+        <div class="text">level 12</div>
+        <div class="text">KMITL</div>
         <div class="social">
-          <a><div class="facebook"></div>
-            <div class="ig"></div>
+            <a href=""><div class="facebook"></div></a>
+            <a href=""><div class="ig"></div></a>
         </div>
-        <div>contact</div>
+        <div class="contact">contact</div>
+
+        </div>
     </div>
-</div>
 </body>
 </html>
