--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -8,10 +8,10 @@
 <body>
     <button onclick="random_color()">click</button>
     <script>
-        const random_color = () => {
-            const bgColor = `rgb(${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)})`
-            document.body.style.background = bgColor
-        }
+       const random_color = () => {
+            const bgcolor =  `rgb(${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)})`
+             document.body.style.background = bgColor
+       }
     </script>
 </body>
 </html>
